--- a/PhoneGapBasic/platforms/wp8/PhoneGapBasic.csproj
+++ b/PhoneGapBasic/platforms/wp8/PhoneGapBasic.csproj
@@ -260,7 +260,7 @@
         <Content Include="www\js\app.js" />
     </ItemGroup>
     <ItemGroup>
-        <Content Include="www\js\controllers\aktuellesController.js" />
+        <Content Include="www\js\controllers\mainAktuellesController.js" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\js\controllers\navBarController.js" />
@@ -269,10 +269,16 @@
         <Content Include="www\js\libs\codiqa.ext.js" />
     </ItemGroup>
     <ItemGroup>
+        <Content Include="www\js\libs\ember-0.9.8.1.js" />
+    </ItemGroup>
+    <ItemGroup>
         <Content Include="www\js\libs\ember-1.0.0-rc.6.1.js" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\js\libs\ember-1.0.0-rc.7.min.js" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\js\libs\ember-data-latest.js" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\js\libs\ember-moving.js" />
@@ -294,6 +300,12 @@
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\js\libs\jquery.mobile-1.3.2.js" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\js\models\news.js" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="www\js\models\store.js" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="www\res\icon\android\icon-36-ldpi.png" />
